# rental_store

./: README.md  pyproject.toml  requirements.txt
docs/: openapi.json
rental_store/: calculator.py  calculators.py  client.py  config.py  customer.py  data_interface.py  data_models.py  data_storage.py  inventory.py  models.py  orm_classes.py  repositories.py  repository_interface.py  store_API.py  store_api.py  store_checkout.py
rental_store/api/: api_models.py  new_api.py  store_api.py
rental_store/repository/: data_storage.py  przemo_repositories.py  repositories.py
rental_store/service/: calculator.py  price_calculator.py  rental_service.py  store_checkout.py
tests/: store_API.py  test_calculator.py  test_data_interface.py  test_inventory.py  test_price_calculator.py  test_rental_service.py  test_store_API.py  test_store_API_customer.py  test_store_API_film.py  test_store_API_json_models.py  test_store_API_rent_films.py  test_store_API_return_films.py  test_store_checkout.py
