[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rental_store_idziegrzesprzezbobrow"
version = "0.0.1"
description = "A simple film rental store with REST API."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Greg", email="" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.92.0",
    "pydantic==1.10.5",
    "uvicorn==0.20.0"
]
packages = [
    {include = "rental_store"},
    {exclude = "tests"}
]
exclude = [
    ".venv",
    ".gitignore",
    ".pytest_cache"
]

[project.optional-dependencies]
test = [
  "pytest==7.2.1",
  "httpx==0.23.3"

]
